[fix] Article max width on smaller screens

--- a/jekyll/_sass/_articles.scss
+++ b/jekyll/_sass/_articles.scss
@@ -4,7 +4,8 @@
     width: 75%;
 
 	@include media-breakpoint-down(sm) {
-		width: auto;
+        width: auto;
+        max-width: 100%;
 	}
 }
 
